@@ -31,8 +31,10 @@ apport (0.111) UNRELEASED; urgency=low
   * apport/ui.py: Drop the PackageArchitecture field for the uploaded report
     if it is equal to Architecture. Adapt apport/crashdb_impl/launchpad.py to
     fall back to Architecture, and mention the change in doc/data-format.tex.
+  * problem_report.py, write_mime(): Add new "skip_keys" argument to filter
+    out keys. Add test cases.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Aug 2008 14:28:15 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Aug 2008 15:13:10 +0200
 
 apport (0.110) intrepid; urgency=low
 
